# OS_Labs_SPbPU_2021

./: .gitignore  CONTRIBUTING.md  README.md
Alexeev.Oleg/lab2/: .gitignore  CMakeLists.txt  build.sh
Alexeev.Oleg/lab2/client/: goat.cpp  goat.h
Alexeev.Oleg/lab2/conn/: conn.h  conn_fifo.cpp  conn_mq.cpp  conn_socket.cpp  message.h
Alexeev.Oleg/lab2/data/: common_data.h
Alexeev.Oleg/lab2/host/: host.cpp  wolf.cpp  wolf.h
Anikin/laba1/: .gitignore  CMakeLists.txt  build.sh
Anikin/laba1/etc/: daemon.cfg
Anikin/laba1/src/: cfg_parser.cpp  cfg_parser.h  daemon.cpp  daemon.h  disck_monitor.cpp  disck_monitor.h  main.cpp  worker.h
Antonov.Aleksei/lab2/: CMakeLists.txt  build.sh
Antonov.Aleksei/lab2/src/: Client.cpp  Client.h  ClientHandler.cpp  ClientHandler.h  Host.cpp  Host.h  main.cpp
Antonov.Aleksei/lab2/src/Connections/: conn.h  conn_mq.cpp  conn_mq.h  conn_pipe.cpp  conn_pipe.h  conn_shm.cpp  conn_shm.h
Antonov.Aleksei/lab3/: CMakeLists.txt  build.sh
Antonov.Aleksei/lab3/Include/: Node.h  Set.h
Antonov.Aleksei/lab3/src/: OptimisticSet.h
Antonov.Aleksei/lab3/test/: Tester.cpp  Tester.h  main.cpp
Derkachenko.Anna/lab2/: CMakeLists.txt  Makefile  build.sh
Derkachenko.Anna/lab2/client/: client.hpp  goat.hpp
Derkachenko.Anna/lab2/conn/: conn.hpp  conn_mmap.cpp  conn_pipe.cpp  conn_shm.cpp  message.hpp
Derkachenko.Anna/lab2/host/: host.cpp  host.hpp  wolf.hpp
Derkachenko.Anna/lab2/utils/: utils.hpp
Ignatiev.Daniil/: CMakeLists.txt
Ignatiev.Daniil/Lab3/headers/: LazySet.h  Node.h  Set.h  Tests.h
Ignatiev.Daniil/Lab3/src/: LazySet.cpp  Node.cpp  Tests.cpp  main.cpp
Ignatiev.Daniil/connection/: conn_mq.h  conn_pipe.h  conn_shm.cpp  conn_shm.h  message.h
Ignatiev.Daniil/host/: client.cpp  host.cpp
Ignatiev.Daniil/lab1/: build.sh  config.txt  daemon.cpp  main.cpp  parser.h
Ignatiev.Daniil/lab2/: build.sh
Ignatiev.Daniil/lab2/connection/: conn_mq.cpp  conn_pipe.cpp  connection.h
Ignatiev.Daniil/lab2/host/: client.cpp  client.h  host.cpp  server.cpp  server.h
Kirpichenko.Stanislav/lab2/src/: CMakeLists.txt  client.cpp  client.h  conn_interface.h  conn_mmap.cpp  conn_mmap.h  conn_pipe.cpp  conn_pipe.h  conn_shm.cpp  conn_shm.h  host.cpp  host.h  singleton.h  singleton.tpp
Kirpichenko.Stanislav/lab3/src/: CMakeLists.txt  LazySet.h  LazySet.tpp  MutexGuardLock.cpp  MutexGuardLock.h  QueueTester.cpp  QueueTester.h  SCSPQueue.h  SCSPQueue.tpp  SetTester.cpp  SetTester.h  Tester.h  TimeTester.cpp  TimeTester.h  main.cpp
Kuksenko.Kirill/Lab2/: CMakeLists.txt  Lab2  build.sh
Kuksenko.Kirill/Lab2/client/: client.cpp  goat.cpp  goat.h
Kuksenko.Kirill/Lab2/connection/: conn.h  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
Kuksenko.Kirill/Lab2/host/: host.cpp  wolf.cpp  wolf.h
Kuksenko.Kirill/Lab2/model/: game.h  semaphores.h
Kuksenko.Kirill/Lab3/: CMakeLists.txt  build.sh
Kuksenko.Kirill/Lab3/include/: fine_grained_set.h  iset.h  set_tester.h
Kuksenko.Kirill/Lab3/src/: fine_grained_set.cpp  set_tester.cpp
Kuksenko.Kirill/Lab3/test/: main.cpp
Ovechkin.Danil/lab2/: CMakeLists.txt  build.sh
Ovechkin.Danil/lab2/client/: client.cpp  goat.cpp  goat.h
Ovechkin.Danil/lab2/conn/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h
Ovechkin.Danil/lab2/host/: host.cpp  wolf.cpp  wolf.h
Ovechkin.Danil/lab2/settings/: GameSettings.h
Shagvaliev.Mikhail/lab2/: CMakeLists.txt  build.sh  dates.csv
Shagvaliev.Mikhail/lab2/client/: client.cpp  weather_predictor.cpp  weather_predictor.h
Shagvaliev.Mikhail/lab2/conn/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h  message.h
Shagvaliev.Mikhail/lab2/host/: host.cpp  requestor.cpp  requestor.h
Shagvaliev.Mikhail/lab2/utils/: definitions.h  logger.h
Shagvaliev.Mikhail/lab3/: CMakeLists.txt  build.sh
Shagvaliev.Mikhail/lab3/src/: LazySet.cpp  LazySet.h  Set.h  SetFactory.h  TypedSetWrapper.h
Shagvaliev.Mikhail/lab3/test/: main.cpp  test.cpp  test.h
Shagvaliev.Mikhail/lab3/util/: definitions.h
Smirnova.Daria/lab2/: CMakeLists.txt  Makefile
Smirnova.Daria/lab2/client/: Goat.cpp  Goat.h  client.cpp
Smirnova.Daria/lab2/connections/: Connection.h  conn_fifo.cpp  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h
Smirnova.Daria/lab2/host/: GameHost.cpp  GameHost.h  host.cpp
Smirnova.Daria/lab2/utils/: ClientInfo.h  GameRules.h  Message.h
Smirnova.Daria/lab3/: CMakeLists.txt  build.sh
Smirnova.Daria/lab3/src/: AsyncLinkedSet.h  AsyncSet.h  CoarseGrainedSet.h  OptimisticSyncSet.h
Smirnova.Daria/lab3/test/: Tester.cpp  Tester.h  main.cpp
Velichko.Arseny/lab1/src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  ConfigParser.tpp  Daemon.cpp  Daemon.h  Grammar.cpp  Grammar.h  Singleton.h  Singleton.tpp  SysLogger.cpp  SysLogger.h  TmpDeleter.cpp  TmpDeleter.h  TmpDeleterGrammar.cpp  TmpDeleterGrammar.h  main.cpp
Velichko.Arseny/lab2/Connections/: CMakeLists.txt  Connection.cpp  Connection.h  IODevice.h
Velichko.Arseny/lab2/Connections/Core/: conn_fifo.cpp  conn_fifo.h  conn_seg.cpp  conn_seg.h  conn_sock.cpp  conn_sock.h
Voinova.Alyona/lab2/: CMakeLists.txt  build.sh
Voinova.Alyona/lab2/client/: ClientImpl.cpp  client.cpp  client.h
Voinova.Alyona/lab2/conn/: Conn_fifo.cpp  Conn_mq.cpp  Conn_seg.cpp  IConn.h  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
Voinova.Alyona/lab2/data/: WeatherDTO.cpp  WeatherDTO.h
Voinova.Alyona/lab2/host/: Host.cpp  Host.h  HostImpl.cpp  host.cpp  host.h
Voinova.Alyona/lab2/stuff/: ClientInfo.cpp  ClientInfo.h  Constants.h
lab2/: CMakeLists.txt  Makefile  client_fifo  client_mq  client_seg  host_fifo  host_mq  host_seg
lab2/client/: client.cpp  oracle.cpp  oracle.h
lab2/common/: commondf.h
lab2/connection/: conn_mq.cpp  conn_pipe.cpp  conn_shm.cpp  connection.h
lab2/connections/: conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h  connection.h
lab2/host/: clientHandler.cpp  clientHandler.h  clientHostConnection.cpp  clientHostConnection.h  futureWeather.cpp  futureWeather.h  host.cpp  host.h  server.cpp  server.h
(+291 files in other folders)
