cmake_minimum_required(VERSION 3.10)
project(Lab2)

set(CLIENT_SRC client)
set(HOST_SRC host)
set(CONNECTION connection)
set(MODEL model)

set(CMAKE_CXX_STANDART 17)
set(CMAKE_CXX_COMPILER g++)

add_compile_options(-Wall -Werror)

include_directories(${CONNECTION})
include_directories(${MODEL})

foreach(CONN seg mq fifo)
    add_executable(host_${CONN} ${HOST_SRC}/host.cpp ${HOST_SRC}/wolf.h ${HOST_SRC}/wolf.cpp
                        ${MODEL}/game.h ${MODEL}/semaphores.h
                        ${CONNECTION}/conn.h ${CONNECTION}/conn_${CONN}.cpp)

    target_link_libraries(host_${CONN} rt pthread)

    add_executable(client_${CONN} ${CLIENT_SRC}/client.cpp ${CLIENT_SRC}/goat.h ${CLIENT_SRC}/goat.cpp
                        ${MODEL}/game.h ${MODEL}/semaphores.h
                        ${CONNECTION}/conn.h ${CONNECTION}/conn_${CONN}.cpp)

    target_link_libraries(client_${CONN} rt pthread)
endforeach(CONN seg mq fifo)
